Many imported/w3c/web-platform-tests/service-workers/ test are failing together intermittently https://bugs.webkit.org/show_bug.cgi?id=180227

Patch by Youenn Fablet <youenn@apple.com> on 2017-12-01
Reviewed by Mark Lam.

No observable change.

* bindings/js/JSDOMPromise.cpp:
(WebCore::callFunction):

Canonical link: https://commits.webkit.org/196255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225406 268f45cc-cd09-0410-ab3c-d52691b4dbfc